@@ -39,6 +39,7 @@ Improvements::
 * refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
 * allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility
 * upgrade prawn-svg to 0.34 to add support for SVG referenced by image tag (SVG in SVG)
+* drop links from entries in TOC (#2505)
 
 Bug Fixes::
 
